ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.5, 3.3.3
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Integration 11 (03/14/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Exposed by fixing SERVER-22950. When we return from mongoSMain, the UserCacheInvalidator is still running, but we have already destroyed its state, since it is created on the stack. This causes a segfault when it tries to access its members (such as its mutex).

            Assignee:
            Adam Midvidy (Inactive)
            Reporter:
            Adam Midvidy (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: