SERVER-22967 ensure UserCacheInvalidator stops before we destroy its state