src/mongo/db/auth/user_cache_invalidator_job.h
@@ -44,6 +44,7 @@ class OperationContext;
 class UserCacheInvalidator : public BackgroundJob {
 public:
     UserCacheInvalidator(AuthorizationManager* authzManager);
+    ~UserCacheInvalidator();
 
     void initialize(OperationContext* txn);
 
